--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -85,7 +85,7 @@
     </div>
     
     <!-- ko if: fileViewer -->
-    <input style="display:inline-block; padding-top: 70px;"
+    <input style="display:inline-block; margin-top: 70px;"
     data-bind="select2Query: {
         select2Config: {
             clickBubble: false,
