--- a/afs/templates/views/components/functions/file-to-iiif.htm
+++ b/afs/templates/views/components/functions/file-to-iiif.htm
@@ -2,6 +2,10 @@
 
 <div style="height:0px">
   <div class="row widget-container">
+    <div>
+      <h4>{% trans "How does this function work?" %}</h4>
+      <p>{% trans "In the widget below, select a card/node that is of File-list datatype. When a tile is created for that card, this function will create a IIIF Manifest record in the database and a corresponding json file. Created IIIF Manifests will be selectable in a IIIF Annotation card. Ensure that Cantaloupe is running for this function to be successful." %}</p>
+    </div>
     <div class="form-group">
       <div class="relative">
           <label class="col-xs-12 control-label widget-input-label"> {% trans "Card Name" %}</label>
