--- a/afs/templates/views/components/search/search-results.htm
+++ b/afs/templates/views/components/search/search-results.htm
@@ -63,8 +63,8 @@
             report: $data.report,
             summary: true
         }
-    }, css: {'selected-instance': $parent.value().indexOf($data['_source']['resourceinstanceid']) >= 0},
-    click: function(){$parent.params.updateTileData($data['_source']['resourceinstanceid'])}"></div>
+    }, css: {'selected-instance': $parent.value().map(function(r){return r.resourceId}).indexOf($data['_source']['resourceinstanceid']) >= 0},
+    click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}"></div>
     <!-- /ko -->
 </div>
 <!-- /ko -->
