Add initial works on the manifest plugin, re #285

--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -26,6 +26,7 @@
 {% block urls %}
     physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
     physical_things_set: "{% url 'physical_things_set' %}",
+    manifest_manager: "{% url 'manifest_manager' %}",
 {% endblock urls %}
 
 {% block project_modules %}
