--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -235,3 +235,8 @@
     cursor: pointer;
     background: #fff;
 }
+
+.upload-dataset-related-widget {
+    padding: 16px;
+    margin-bottom: 20px;
+}
