--- a/afs/templates/views/components/plugins/manifest-manager.htm
+++ b/afs/templates/views/components/plugins/manifest-manager.htm
@@ -39,17 +39,45 @@
         <label class="control-label">{% trans "Description" %}</label>
         <input type="text" placeholder='Manifest Description' class="form-control input-lg" style="height: 36px;" 
             data-bind="textInput: self.manifestDescription, valueUpdate: 'keyup'">
+
         <label class="control-label">{% trans "Metadata" %}</label>
-        <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
-            data-bind="textInput: self.metadataLabel, valueUpdate: 'keyup'">
-        <input type="text" placeholder='Metadata Value' class="form-control input-md" style="height: 36px;" 
-            data-bind="textInput: self.metadataValue, valueUpdate: 'keyup'">
-    
+        <div class="manifest-details-list" data-bind="foreach: manifestMetaData">
+            <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
+                data-bind="textInput: label, valueUpdate: 'keyup'">
+            <!--ko foreach: Array.isArray(value) ? value : [value] -->
+            <input type="text" placeholder='Metadata Value' class="form-control input-md" style="height: 36px;" 
+                data-bind="textInput: $data, valueUpdate: 'keyup'">
+            <!--/ko -->
+            </div>
+
+
+
     </div>
 
     <div class="file-workbench-buttons" style="margin-top: 20px;">
         <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false">{% trans "Save" %}</button>
         <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false">{% trans "Cancel" %}</button>
+    </div>
+
+    <!--ko if: imagesForUpload().length > 0-->
+    <label class="control-label">{% trans "Images to be Added" %}</label>
+    <div class="file-workbench-files" data-bind="foreach: imagesForUpload">
+        <div class='file-workbench-file' style="display: inline-flex;" data-bind="click: $parent.removeFile, clickBubble: false">
+            <i class="fa fa-trash" style="margin: 0px 10px"></i>
+            <span class='file-name' data-bind="text: name"></span>
+        </div>
+    </div>
+    <!--/ko-->
+
+    <div class="dropzone-photo-upload" data-bind="dropzone: dropzoneOptions">
+        <div class="file-workbench-buttons">
+            <button class="btn btn-primary btn-lg btn-block btn-labeled btn-workbench fa fa-file fileinput-button dz-clickable" data-bind="css: uniqueidClass">
+                <span>{% trans "Create a new Manifest" %}</span>
+            </button>
+        </div>
+        <div style="min-height: 100%;">
+            <div id="hidden-dz-previews" style="display:none"></div>
+        </div>
     </div>
 </div>
 <!--/ko-->
@@ -63,24 +91,38 @@
 
 <div class="iiif-image-tools">
     <!--ko if: canvases().length > 0-->
-    <label class="control-label">Canvases</label>
+    <label class="control-label">{% trans "Canvases" %}</label>
     <div class="file-workbench-files" data-bind="foreach: canvases">
-        <div class='file-workbench-file' style="display: inline-flex;" data-bind="click: $parent.canvasClick, clickBubble: false, css: {staged: ko.unwrap($parent.canvas) === $data.images[0].resource.service['@id']}">
-            <input type="checkbox" data-bind="value: $data, checked: $parent.canvasesForDeletion">
-            <span class='file-name' data-bind="text: label"></span>
+        <div class='file-workbench-file' style="display: inline-flex;" data-bind="css: {staged: ko.unwrap($parent.canvas) === $data.images[0].resource.service['@id']}">
+            <input type="checkbox" style="width:1em; height:1em;" data-bind="value: $data, checked: $parent.canvasesForDeletion">
+            <!--ko if: ko.unwrap($parent.canvas) === $data.images[0].resource.service['@id'] -->
+            <span class='file-name' data-bind="text: $parent.canvasLabel, click: $parent.canvasClick, clickBubble: false"></span>
+            <!--/ko-->
+            <!--ko ifnot: ko.unwrap($parent.canvas) === $data.images[0].resource.service['@id'] -->
+            <span class='file-name' data-bind="text: label, click: $parent.canvasClick, clickBubble: false"></span>
+            <!--/ko-->
         </div>
     </div>
+
+    <div class="file-workbench-buttons">
+        <button style="width: 50%; margin-right: 2px;" class="btn btn-md btn-primary" data-bind="click: addAllCanvases"
+        ><i class="fa fa-check-square"></i> {% trans 'Select All' %}</button>
+        <button style="width: 50%; margin-left: 2px;" class="btn btn-md btn-primary" data-bind="click: clearCanvasSelection, css: {
+            disabled: canvasesForDeletion().length === 0
+        }"><i class="fa fa-eraser"></i> {% trans 'Clear All' %}</button>
+    </div>
+
     <!--ko if: canvas-->
     <label class="control-label">{% trans "Image Information" %}</label>
     <div>
         <input type="text" placeholder='Image Caption' class="form-control input-lg" style="height: 36px;" 
-        data-bind="textInput: self.canvas.label, valueUpdate: 'keyup'">
+        data-bind="textInput: self.canvasLabel, valueUpdate: 'keyup'">
     </div>
     <!--/ko-->
     <!--/ko-->
         
     <!--ko if: imagesForUpload().length > 0-->
-    <label class="control-label">Images to be Added</label>
+    <label class="control-label">{% trans "Images to be Added" %}</label>
     <div class="file-workbench-files" data-bind="foreach: imagesForUpload">
         <div class='file-workbench-file' style="display: inline-flex;" data-bind="click: $parent.removeFile, clickBubble: false">
             <i class="fa fa-trash" style="margin: 0px 10px"></i>
@@ -100,8 +142,8 @@
             <div id="hidden-dz-previews" style="display:none"></div>
         </div>
         <div class="file-workbench-buttons" style="margin-top: 20px;">
-            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false">{% trans "Save" %}</button>
-            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false">{% trans "Cancel" %}</button>
+            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false, css: {disabled: canvasesForDeletion().length === 0}">{% trans "Save" %}</button>
+            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false, css: {disabled: canvasesForDeletion().length === 0}">{% trans "Cancel" %}</button>
         </div>
     </div>
 </div>
