Add canvas label change backend, #285

--- a/afs/templates/views/components/plugins/manifest-manager.htm
+++ b/afs/templates/views/components/plugins/manifest-manager.htm
@@ -142,8 +142,8 @@
             <div id="hidden-dz-previews" style="display:none"></div>
         </div>
         <div class="file-workbench-buttons" style="margin-top: 20px;">
-            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false, css: {disabled: canvasesForDeletion().length === 0}">{% trans "Save" %}</button>
-            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false, css: {disabled: canvasesForDeletion().length === 0}">{% trans "Cancel" %}</button>
+            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false">{% trans "Save" %}</button>
+            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false">{% trans "Cancel" %}</button>
         </div>
     </div>
 </div>
