--- a/afs/templates/views/components/plugins/manifest-manager.htm
+++ b/afs/templates/views/components/plugins/manifest-manager.htm
@@ -41,7 +41,15 @@
             data-bind="textInput: self.manifestDescription, valueUpdate: 'keyup'">
 
         <label class="control-label">{% trans "Metadata" %}</label>
-        <div class="manifest-details-list" data-bind="foreach: manifestMetaData">
+        <div class="manifest-details-list">
+            <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
+                data-bind="textInput: metaDataLabel, valueUpdate: 'keyup'">
+            <input type="text" placeholder='Metadata Value' class="form-control input-md" style="height: 36px;" 
+                data-bind="textInput: metaDataValues, valueUpdate: 'keyup'">
+            </div>
+
+        <label class="control-label">{% trans "Metadata" %}</label>
+            <div class="manifest-details-list" data-bind="foreach: manifestMetaData">
             <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
                 data-bind="textInput: label, valueUpdate: 'keyup'">
             <!--ko foreach: Array.isArray(value) ? value : [value] -->
