--- a/afs/templates/views/components/plugins/manifest-manager.htm
+++ b/afs/templates/views/components/plugins/manifest-manager.htm
@@ -10,11 +10,9 @@
     <i class="fa fa-book"></i>
     <span class="map-sidebar-text">{% trans "Manifest" %}</span>
 </div>
-
 <div class="workbench-card-sidebar-tab" data-bind="click: function() {
     toggleTab('canvas');
-}, css: {
-    'active': activeTab() === 'canvas'
+}, css: {'active': activeTab() === 'canvas', 'disabled': !canvas()
 }">
     <i class="fa fa-book"></i>
     <span class="map-sidebar-text">{% trans "Canvas" %}</span>
@@ -37,34 +35,23 @@
         <input type="text" placeholder="Manifest Title" class="form-control input-lg" style="height: 36px;"
             data-bind="textInput: self.manifestName, valueUpdate: 'keyup'">
         <label class="control-label">{% trans "Description" %}</label>
-        <input type="text" placeholder='Manifest Description' class="form-control input-lg" style="height: 36px;" 
-            data-bind="textInput: self.manifestDescription, valueUpdate: 'keyup'">
+        <textarea rows="10" type="text" placeholder='Manifest Description' class="form-control input-lg"
+            data-bind="textInput: self.manifestDescription, valueUpdate: 'keyup'"></textarea>
 
         <label class="control-label">{% trans "Metadata" %}</label>
         <div class="manifest-details-list">
+            <label class="control-label">{% trans "Lebel" %}</label>
             <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
                 data-bind="textInput: metaDataLabel, valueUpdate: 'keyup'">
+            <label class="control-label">{% trans "Values" %}</label>
             <input type="text" placeholder='Metadata Value' class="form-control input-md" style="height: 36px;" 
                 data-bind="textInput: metaDataValues, valueUpdate: 'keyup'">
-            </div>
-
-        <label class="control-label">{% trans "Metadata" %}</label>
-            <div class="manifest-details-list" data-bind="foreach: manifestMetaData">
-            <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
-                data-bind="textInput: label, valueUpdate: 'keyup'">
-            <!--ko foreach: Array.isArray(value) ? value : [value] -->
-            <input type="text" placeholder='Metadata Value' class="form-control input-md" style="height: 36px;" 
-                data-bind="textInput: $data, valueUpdate: 'keyup'">
-            <!--/ko -->
-            </div>
-
-
-
+        </div>
     </div>
 
     <div class="file-workbench-buttons" style="margin-top: 20px;">
-        <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false">{% trans "Save" %}</button>
-        <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false">{% trans "Cancel" %}</button>
+        <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: updateManifest, clickBubble: false, disable: !isManifestDirty()">{% trans "Save" %}</button>
+        <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false, disable: !isManifestDirty()">{% trans "Cancel" %}</button>
     </div>
 
     <!--ko if: imagesForUpload().length > 0-->
@@ -76,16 +63,23 @@
         </div>
     </div>
     <!--/ko-->
-
-    <div class="dropzone-photo-upload" data-bind="dropzone: dropzoneOptions">
-        <div class="file-workbench-buttons">
-            <button class="btn btn-primary btn-lg btn-block btn-labeled btn-workbench fa fa-file fileinput-button dz-clickable" data-bind="css: uniqueidClass">
+    
+    <div class="dropzone-photo-upload" data-bind="dropzone: dropzoneOptions4create">
+        <div class="file-workbench-buttons" style="margin-bottom: 20px;">
+            <button class="btn btn-primary btn-lg btn-block btn-labeled btn-workbench fa fa-file fileinput-create-button dz-clickable" data-bind="css: uniqueidClass">
                 <span>{% trans "Create a new Manifest" %}</span>
             </button>
         </div>
         <div style="min-height: 100%;">
-            <div id="hidden-dz-previews" style="display:none"></div>
+            <div id="hidden-dz-create-previews" style="display:none"></div>
         </div>
+        <!--ko if: manifest-->
+        <div class="file-workbench-buttons">
+            <button class="btn btn-primary btn-lg btn-block btn-labeled btn-workbench fa fa-file" data-bind="click: deleteManifest">
+                <span>{% trans "Delete the current Manifest" %}</span>
+            </button>
+        </div>
+        <!--/ko-->
     </div>
 </div>
 <!--/ko-->
@@ -100,6 +94,7 @@
 <div class="iiif-image-tools">
     <!--ko if: canvases().length > 0-->
     <label class="control-label">{% trans "Canvases" %}</label>
+    <div>{% trans "Select canvas to delete from the manifest" %}</div>
     <div class="file-workbench-files" data-bind="foreach: canvases">
         <div class='file-workbench-file' style="display: inline-flex;" data-bind="css: {staged: ko.unwrap($parent.canvas) === $data.images[0].resource.service['@id']}">
             <input type="checkbox" style="width:1em; height:1em;" data-bind="value: $data, checked: $parent.canvasesForDeletion">
@@ -113,9 +108,9 @@
     </div>
 
     <div class="file-workbench-buttons">
-        <button style="width: 50%; margin-right: 2px;" class="btn btn-md btn-primary" data-bind="click: addAllCanvases"
+        <button style="width: 50%; margin: 10px 2px 20px 0px;" class="btn btn-md btn-primary" data-bind="click: addAllCanvases"
         ><i class="fa fa-check-square"></i> {% trans 'Select All' %}</button>
-        <button style="width: 50%; margin-left: 2px;" class="btn btn-md btn-primary" data-bind="click: clearCanvasSelection, css: {
+        <button style="width: 50%; margin: 10px 0px 20px 2px;" class="btn btn-md btn-primary" data-bind="click: clearCanvasSelection, css: {
             disabled: canvasesForDeletion().length === 0
         }"><i class="fa fa-eraser"></i> {% trans 'Clear All' %}</button>
     </div>
@@ -150,8 +145,8 @@
             <div id="hidden-dz-previews" style="display:none"></div>
         </div>
         <div class="file-workbench-buttons" style="margin-top: 20px;">
-            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: submitForManifest, clickBubble: false">{% trans "Save" %}</button>
-            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false">{% trans "Cancel" %}</button>
+            <button class="btn btn-mint btn-lg btn-labeled fa fa-pencil" data-bind="click: updateManifest, clickBubble: false, disable: !isCanvasDirty()">{% trans "Save" %}</button>
+            <button class="btn btn-danger btn-lg btn-labeled fa fa-refresh" data-bind="click: reset, clickBubble: false, disable: !isCanvasDirty()">{% trans "Cancel" %}</button>
         </div>
     </div>
 </div>
