--- a/afs/templates/views/components/plugins/manifest-manager.htm
+++ b/afs/templates/views/components/plugins/manifest-manager.htm
@@ -40,7 +40,7 @@
 
         <label class="control-label">{% trans "Metadata" %}</label>
         <div class="manifest-details-list">
-            <label class="control-label">{% trans "Lebel" %}</label>
+            <label class="control-label">{% trans "Label" %}</label>
             <input type="text" placeholder='Metadata Label' class="form-control input-md" style="height: 36px;" 
                 data-bind="textInput: metaDataLabel, valueUpdate: 'keyup'">
             <label class="control-label">{% trans "Values" %}</label>
