--- a/afs/templates/views/components/workflows/project-object-select-step.htm
+++ b/afs/templates/views/components/workflows/project-object-select-step.htm
@@ -15,7 +15,7 @@
                 value: projectResourceId,
                 graphids: ["0b9235d9-ca85-11e9-9fa2-a4d18cec433a"],
                 disabled: false,
-                renderContext: "search",
+                renderContext: "workflow",
                 selectedItem: selectedProject
             }
         } -->
@@ -35,7 +35,7 @@
                 value: objectResourceId,
                 graphids: ["9519cb4f-b25b-11e9-8c7b-a4d18cec433a"],
                 disabled: false,
-                renderContext: "search",
+                renderContext: "workflow",
                 selectedItem: selectedObject
             }
         } -->
