--- a/afs/templates/views/components/workflows/physical-thing-list.htm
+++ b/afs/templates/views/components/workflows/physical-thing-list.htm
@@ -1,4 +1,4 @@
-<div class="" style="display: flex; flex-direction: column;">
+<div class="physical-thing-search-list-container" style="display: flex; flex-direction: column;">
     <div class="physical-thing-search-list">
         <!-- ko foreach: items -->
         <div class="resource-report" data-bind="component: {
