--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -38,13 +38,17 @@
 </div>
 
 
+<div class="iiif-image-tools" style="margin-top: 5px;">
+    <label class="control-label">{% trans "Dataset Name" %}</label>
+    <input type="text" class="form-control" style="width: 100%;" placeholder="Dataset name" data-bind="textInput: selectedSample().datasetName">
+</div>
 
-<div class="iiif-image-tools" style="margin-top: 20px;">
+<div class="iiif-image-tools" style="margin-top: 12px;">
     <!-- ko if: files().length > 0 -->
     <label class="control-label">{% trans "Associated Files" %}</label>
-    <div class="file-workbench-files" data-bind="foreach: {data: files, as: 'file'}">
+    <div class="file-workbench-files" style="margin-top: 0" data-bind="foreach: {data: files, as: 'file'}">
         <div class='file-workbench-file' style="display: inline-flex;" data-bind="css: {staged: false}">
-            <input type="checkbox" style="width: 15px; height: 15px; margin: 0px" data-bind="value: file, checked: false">
+            <input type="checkbox" style="width: 15px; height: 15px; margin: 0px" data-bind="value: file, checked: $parent.selectedSample().datasetFiles">
             <span class='file-name manifest-manager-canvas-name' data-bind="text: file.name, click: function(){console.log(file)}, clickBubble: false"></span>
         </div>
     </div>
